# backseater

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml  build.rs
crates/app/resources/: make_ico.ps1
crates/app/src/: animated_img.rs  assets.rs  bridge.rs  channel_store.rs  chatview.rs  child_window.rs  commands.rs  controller.rs  emote_cache.rs  image_cache.rs  main.rs  mentions.rs  popout.rs  preview.rs  render.rs  search.rs  selectable.rs  session.rs  settings.rs  sound.rs  stale_hover.rs  streamer_mode.rs  tabs.rs  thread.rs  updater.rs  usercard.rs  viewerlist.rs  window_state.rs
crates/app/src/chatview/: log.rs  picker.rs
crates/auth/: Cargo.toml
crates/auth/src/: kick.rs  lib.rs  server.rs  store.rs  twitch.rs
crates/core/: Cargo.toml
crates/core/src/: emote.rs  ignore.rs  lib.rs  links.rs  mention.rs  message.rs  scale.rs  suppress.rs  term_rules.rs  text.rs  theme.rs  time.rs
crates/emotes/: Cargo.toml
crates/emotes/src/: bttv.rs  ffz.rs  http.rs  lib.rs  paints.rs  registry.rs  seventv.rs  seventv_api.rs
crates/kick/: Cargo.toml  KICK_EVENTS.md
crates/kick/src/: actions.rs  api.rs  builder.rs  connector.rs  history.rs  lib.rs  preview.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/preview/: Cargo.toml
crates/preview/src/: lib.rs
crates/twitch/: Cargo.toml
crates/twitch/src/: actions.rs  badges.rs  builder.rs  connector.rs  eventsub.rs  eventsub_manager.rs  helix.rs  history.rs  http.rs  irc_manager.rs  ivr.rs  lib.rs  preview.rs  pubsub.rs  videos.rs  viewers.rs
crates/youtube/: Cargo.toml
crates/youtube/src/: api.rs  builder.rs  connector.rs  lib.rs  preview.rs  resolve.rs  streams.rs
docs/: RELEASING.md
worker/: README.md  wrangler.toml
worker/src/: index.js
