[package]
name = "bks-emotes"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bks-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
