[package]
name = "bks-twitch"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bks-core.workspace = true
bks-platform.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tmi = "0.10"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# The dep tree has both `ring` and `aws-lc-rs`, so rustls can't auto-pick a
# crypto provider; we install `ring` explicitly before connecting (see pubsub).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
